branches/BulletSharpPInvoke/Dynamics/RigidBody.cs


			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btRigidBody_btRigidBodyConstructionInfo_new(float mass, IntPtr motionState, IntPtr collisionShape, [In] ref Vector3 localInertia);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btRigidBody_btRigidBodyConstructionInfo_new2(float mass, IntPtr motionState, IntPtr collisionShape);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getMass(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setMass(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btRigidBody_btRigidBodyConstructionInfo_getMotionState(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setMotionState(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btRigidBody_btRigidBodyConstructionInfo_getStartWorldTransform(IntPtr obj, [Out] out Matrix value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setStartWorldTransform(IntPtr obj, [In] ref Matrix value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btRigidBody_btRigidBodyConstructionInfo_getCollisionShape(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setCollisionShape(IntPtr obj, IntPtr value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btRigidBody_btRigidBodyConstructionInfo_getLocalInertia(IntPtr obj, [Out] out Vector3 value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setLocalInertia(IntPtr obj, [In] ref Vector3 value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getLinearDamping(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setLinearDamping(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAngularDamping(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAngularDamping(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getFriction(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setFriction(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getRollingFriction(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setRollingFriction(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getRestitution(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setRestitution(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getLinearSleepingThreshold(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setLinearSleepingThreshold(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAngularSleepingThreshold(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAngularSleepingThreshold(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern bool btRigidBody_btRigidBodyConstructionInfo_getAdditionalDamping(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAdditionalDamping(IntPtr obj, bool value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAdditionalDampingFactor(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAdditionalDampingFactor(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAdditionalLinearDampingThresholdSqr(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAdditionalLinearDampingThresholdSqr(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAdditionalAngularDampingThresholdSqr(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAdditionalAngularDampingThresholdSqr(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btRigidBody_btRigidBodyConstructionInfo_getAdditionalAngularDampingFactor(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_setAdditionalAngularDampingFactor(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btRigidBody_btRigidBodyConstructionInfo_delete(IntPtr obj);
		}

        MotionState _motionState;

		internal RigidBody(IntPtr native)
			: base(native)
		{
		}

		public RigidBody(RigidBodyConstructionInfo constructionInfo)
			: base(btRigidBody_new(constructionInfo._native))
		{
            _motionState = constructionInfo._motionState;
		}

		public RigidBody(float mass, MotionState motionState, CollisionShape collisionShape, Vector3 localInertia)
			: base(btRigidBody_new2(mass, motionState._native, collisionShape._native, ref localInertia))
		{
            _motionState = motionState;
		}

		public RigidBody(float mass, MotionState motionState, CollisionShape collisionShape)
			: base(btRigidBody_new3(mass, motionState._native, collisionShape._native))
		{
            _motionState = motionState;
		}

		public void AddConstraintRef(TypedConstraint c)
		{
			btRigidBody_addConstraintRef(_native, c._native);
		}

		public void ApplyCentralForce(Vector3 force)
		{
			btRigidBody_applyCentralForce(_native, ref force);
		}

		public void ApplyCentralImpulse(Vector3 impulse)
		{
			btRigidBody_applyCentralImpulse(_native, ref impulse);
		}

		public void ApplyDamping(float timeStep)
		{
			btRigidBody_applyDamping(_native, timeStep);
		}

		public void ApplyForce(Vector3 force, Vector3 rel_pos)
		{
			btRigidBody_applyForce(_native, ref force, ref rel_pos);
		}

		public void ApplyGravity()
		{
			btRigidBody_applyGravity(_native);
		}

		public void ApplyImpulse(Vector3 impulse, Vector3 rel_pos)
		{
			btRigidBody_applyImpulse(_native, ref impulse, ref rel_pos);
		}

		public void ApplyTorque(Vector3 torque)
		{
			btRigidBody_applyTorque(_native, ref torque);
		}

		public void ApplyTorqueImpulse(Vector3 torque)
		{
			btRigidBody_applyTorqueImpulse(_native, ref torque);
		}

		public bool CheckCollideWithOverride(CollisionObject co)
		{
			return btRigidBody_checkCollideWithOverride(_native, co._native);
		}

		public void ClearForces()
		{
			btRigidBody_clearForces(_native);
		}

		public float ComputeAngularImpulseDenominator(Vector3 axis)
		{
			return btRigidBody_computeAngularImpulseDenominator(_native, ref axis);
		}

		public void ComputeGyroscopicForce(float maxGyroscopicForce)
		{
			btRigidBody_computeGyroscopicForce(_native, maxGyroscopicForce);
		}

		public float ComputeImpulseDenominator(Vector3 pos, Vector3 normal)
		{
			return btRigidBody_computeImpulseDenominator(_native, ref pos, ref normal);
		}

		public void GetAabb(out Vector3 aabbMin, out Vector3 aabbMax)
		{
            btRigidBody_getAabb(_native, out aabbMin, out aabbMax);
		}

		public TypedConstraint GetConstraintRef(int index)
		{
			return TypedConstraint.GetManaged(btRigidBody_getConstraintRef(_native, index));
		}

        public Vector3 GetVelocityInLocalPoint(Vector3 rel_pos)
        {
            Vector3 velocity;
            btRigidBody_getVelocityInLocalPoint(_native, ref rel_pos, out velocity);
            return velocity;
        }

		public void IntegrateVelocities(float step)
		{
			btRigidBody_integrateVelocities(_native, step);
		}

		public void PredictIntegratedTransform(float step, out Matrix predictedTransform)
		{
			btRigidBody_predictIntegratedTransform(_native, step, out predictedTransform);
		}

		public void ProceedToTransform(Matrix newTrans)
		{
			btRigidBody_proceedToTransform(_native, ref newTrans);
		}

		public void RemoveConstraintRef(TypedConstraint c)
		{
			btRigidBody_removeConstraintRef(_native, c._native);
		}

		public void SaveKinematicState(float step)
		{
			btRigidBody_saveKinematicState(_native, step);
		}

		public void SetDamping(float lin_damping, float ang_damping)
		{
			btRigidBody_setDamping(_native, lin_damping, ang_damping);
		}

		public void SetMassProps(float mass, Vector3 inertia)
		{
			btRigidBody_setMassProps(_native, mass, ref inertia);
		}

		public void SetNewBroadphaseProxy(BroadphaseProxy broadphaseProxy)
		{
			btRigidBody_setNewBroadphaseProxy(_native, broadphaseProxy._native);
		}

		public void SetSleepingThresholds(float linear, float angular)
		{
			btRigidBody_setSleepingThresholds(_native, linear, angular);
		}

		public void Translate(Vector3 v)
		{
			btRigidBody_translate(_native, ref v);
		}

		public RigidBody Upcast(CollisionObject colObj)
		{
            return RigidBody.GetManaged(btRigidBody_upcast(colObj._native)) as RigidBody;
		}
